--- a/app/templates/books.hbs
+++ b/app/templates/books.hbs
@@ -1,1 +1,5 @@
-{{outlet}}
+<ul>
+  {{#each model as |book|}}
+    {{book-cover book=book blurBackground=(route-action "blurBackground")}}
+  {{/each}}
+</ul>
